fixed spacing

--- a/assets/scss/_theme.scss
+++ b/assets/scss/_theme.scss
@@ -5,6 +5,10 @@
 	box-sizing: border-box;
 }
 
+.collapse + * {
+	margin-top: 0;
+}
+
 body {
 	font-family: Georgia, serif;
 	// Needs latest Compass, add '@import "compass"' to your scss
